@@ -4,6 +4,7 @@ CHANGELOG Roundcube Webmail
 - Fix login redirect issues (#1487686)
 - Require PHP 5.2.1 or greater
 - Fix %h/%z variables in username_domain option (#1487701)
+- Workaround for setting charset in case of malformed bodystructure response (#1487700)
 
 RELEASE 0.5
 -----------
